# FischMacro

./: Cargo.toml  Fisch Cream's Macro free edition.Ahk  LICENSE  README.md
.forgejo/workflows/: release.yml
src/: lib.rs  main.rs
src/utils/: args.rs  checks.rs  clickers.rs  colors.rs  debug.rs  fishing.rs  geometry.rs  helpers.rs  kwin.rs  mod.rs
