[package]
name = "fischy"
version = "0.2.0"
edition = "2024"
authors = ["Mylloon"]
description = "Macro for the 'Fisch' roblox game"
readme = "README.md"
repository = "https://git.mylloon.fr/Anri/Fischy"
publish = false
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
enigo = { version = "0.6", features = ["wayland"] }
env_logger = "0.11.8"
image = "0.25"
imageproc = { version = "0.26", optional = true }
log = "0.4"
rand = "0.9"
rdev = { git = "https://github.com/Narsil/rdev", rev="c14f2dc", features = ["wayland"] }
scap = { git = "https://github.com/Mylloon/scap", branch="0.0.8-with-windows-send" }
sysinfo = "0.37"
window_raiser = "0.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
strip = "symbols"
lto = "thin"
